--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <body>
+<div id="root"></div>
+
 </body>
 <script>
-</script>
+    const root = document.getElementById("root");
 
+    // id, property, content
+    const span = React.createElement("span", {id: "sexy-span", style :{color:"red"}}, "Hello I'm a span");
+    ReactDOM.render(span, root);
+</script>
 
 
 </html>
