--- a/index.html
+++ b/index.html
@@ -2,26 +2,29 @@
 <html>
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <body>
 <div id="root"></div>
 
 </body>
-<script>
+<script type="text/babel">
+    // https://babeljs.io/
     const root = document.getElementById("root");
-    // id, property, content
-    const h3 = React.createElement("h3", {
-        id:"title",
-        onMouseEnter: () => console.log("mouse enter"),
-    }, "Hello I'm a span");
+    // jsx, Babel이 웹브라우저가 JSX를 인식할수있도록 변환해줌.
+    // 변환기를 설치해줘야함.
 
-    // property 자리에 event listner 추가
-    const btn = React.createElement("button", {
-        onClick: () => console.log("im clicked"),
-        style: {
-            backgroundColor: "tomato",
-        }
-    }, "Click me");
-    const container = React.createElement("div", null, [h3, btn]);
+    const Button = (<button style={{backgroundColor: "tomato"}} onClick={
+        () => console.log("im clicked")}>Click me
+    </button>);
+
+    const Title = (
+        <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+            Hello I'm a span
+        </h3>
+    );
+
+
+    const container = React.createElement("div", null, [Title, Button]);
 
 
     ReactDOM.render(container, root);
