--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </body>
 <script type="text/babel">
 
-    // counter가 바뀌면 rerender가 된다.
-    function App(){
+    function MinutesToHours(){
         // useState에 들어가는 값은 기본값을 의미함.
         const [amount, setAmount] = React.useState(0);
         const [inverted, setInverted] = React.useState(false);
@@ -31,20 +30,91 @@
 
         return (
             <div>
-                <h1>Super Converter</h1>
+                <h3>Minutes & Hours</h3>
                 <div>
                     <label htmlFor="minutes">Minutes</label>
-                    <input value={inverted ? amount * 60 : amount} id="minutes" placeholder="Minutes" type="number" onChange={onChange} disabled={inverted}/>
+                    <input value={inverted ? amount * 60 : amount} id="minutes" placeholder="Minutes" type="number"
+                           onChange={onChange} disabled={inverted}/>
                 </div>
                 <div>
                     <label htmlFor="hours">Hours</label>
-                    <input value={inverted ? amount : Math.round(amount / 60)} id="hours" placeholder="Hours" type="number" onChange={onChange} disabled={!inverted}/>
+                    <input value={inverted ? amount : Math.round(amount / 60)} id="hours" placeholder="Hours"
+                           type="number" onChange={onChange} disabled={!inverted}/>
                 </div>
                 <button onClick={onReset}>Reset</button>
                 <button onClick={onFlip}>{inverted ? "Turn back" : "Inverted"}</button>
             </div>
         )
     }
+
+    function KmtoMiles(){
+        const [km, setKm] = React.useState();
+        const [inverted, setInverted] = React.useState(false);
+
+        const onChange = (event) => {
+            setKm(event.target.value);
+        };
+
+        const onReset = () => {
+            setKm(0);
+        }
+
+        const onFlip = () => {
+            onReset()
+            setInverted((current) => !current);
+        }
+
+        return (
+            <div>
+                <h3>Km & Miles</h3>
+                <div>
+                    <label htmlFor="km">Km</label>
+                    <input value={inverted ? km * 1.6 : km} id="km" placeholder="km" type="number" onChange={onChange}
+                           disabled={inverted}/>
+                </div>
+                <div>
+                    <label htmlFor="miles">Miles</label>
+                    <input value={inverted ? km : km / 1.6} id="miles" placeholder="Miles" type="number"
+                           onChange={onChange} disabled={!inverted}/>
+                </div>
+                <button onClick={onReset}>Reset</button>
+                <button onClick={onFlip}>{inverted ? "Turn back" : "Inverted"}</button>
+            </div>
+
+        )
+    }
+
+    function App() {
+        const [index, setIndex] = React.useState("xx");
+
+        const onSelect = (event) => {
+            setIndex(event.target.value);
+        }
+
+
+        return (
+            <div>
+                <h1>Super Converter</h1>
+                <select value={index} onChange={onSelect}>
+                    <option value="xx">Select your units</option>
+                    <option value="0">Minutes & Hours</option>
+                    <option value="1">Km & Miles</option>
+                </select>
+                <hr/>
+                {
+                    index === "xx" ? "Please select your unites" : null
+                }
+                {
+                //  자바스크립트를 쓰려면 {} 감싸줘야함.
+                    index === "0" ? <MinutesToHours /> : null
+                }
+                {
+                    index === "1" ? <KmtoMiles /> : null
+                }
+            </div>
+        )
+    }
+
 
     const root = document.getElementById('root');
 
