--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
+<script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <body>
 <div id="root"></div>
@@ -13,32 +14,32 @@
 <!--props는 오브젝트라 {banana} 처럼 축약사용이 가능하다.-->
 <!--state 변경되면 re-render 된다. 이게 리액트의 약속이다.-->
 <!--하지만 state가 변경되지 않은것도 변경된다. 왜? App의 state가 변경된것이기 대문이다. 따라서 자식 컴포넌트들도 re-render됨-->
+<!--propType은 어떤 propType을 전달받고 있는지 Validation을 해주는군!-->
 
 <script type="text/babel">
 
-
-    function Btn({text, chnageValue}){
-        console.log(text, "was rendered");
+    function Btn({text, fontSize = 14}){
         return <button
-            onClick={chnageValue}
             style={{
             backgroundColor:"tomato",
             color:"white",
             padding:"10 px 20px",
             border: 0,
             borderRadius: 10,
+            fontSize: {fontSize},
         }}>{text}</button>;
     }
-    const MemorizedBtn = React.memo(Btn);
+
+    Btn.propTypes = {
+        text: PropTypes.string.isRequired,
+        fontSize: PropTypes.number
+    };
 
     function App() {
-        const [value, setValue] = React.useState("Save Changes");
-        const changeValue = () => setValue("Revert Changes");
-
         return (
             <div>
-                <MemorizedBtn text={value} chnageValue={changeValue}/>
-                <MemorizedBtn text="Continue"/>
+                <Btn text="Save Change" fontSize={18} />
+                <Btn text="Contibue" />
             </div>
         );
     }
